[tool.poetry]
name = "mybbtwitter"
version = "0.1.0"
description = ""
authors = ["cobaltCorsair <cobaltcorsair@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
flask = "1.1.2"
flask-mongoengine = "^1.0.0"
jinja2 = "2.11.3"
markupsafe = "1.1.1"
itsdangerous = "1.1.0"
werkzeug = "1.0.1"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
